--- a/backend/package.json
+++ b/backend/package.json
@@ -1,19 +1,26 @@
 {
     "dependencies": {
-      "bcrypt": "^5.1.1",
-      "cookie-parser": "^1.4.6",
-      "cors": "^2.8.5",
-      "dotenv": "^16.4.5",
-      "express": "^4.19.2",
-      "jsonwebtoken": "^9.0.2",
-      "mongodb": "^6.7.0",
-      "mongoose": "^8.4.4",
-      "nodemailer": "^6.9.14"
+        "bcrypt": "^5.1.1",
+        "cookie-parser": "^1.4.7",
+        "cors": "^2.8.5",
+        "dotenv": "^16.4.5",
+        "express": "^4.21.1",
+        "express-session": "^1.18.1",
+        "got": "^13.0.0",
+        "jsonwebtoken": "^9.0.2",
+        "mongodb": "^6.9.0",
+        "mongoose": "^8.7.2",
+        "nodemailer": "^6.9.14",
+        "passport": "^0.7.0",
+        "passport-spotify": "^2.0.0",
+        "querystring": "^0.2.1",
+        "socket.io": "^4.8.0",
+        "spotify-web-api-node": "^5.0.2"
     },
     "scripts": {
-      "start": "nodemon index.js"
+        "start": "nodemon index.js"
     },
     "devDependencies": {
-      "nodemon": "^3.1.4"
+        "nodemon": "^3.1.4"
     }
-  }
+}
