--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,6 @@
 {
     "dependencies": {
+        "axios": "^1.7.7",
         "bcrypt": "^5.1.1",
         "cookie-parser": "^1.4.7",
         "cors": "^2.8.5",
@@ -10,6 +11,7 @@
         "jsonwebtoken": "^9.0.2",
         "mongodb": "^6.9.0",
         "mongoose": "^8.7.2",
+        "nanoid": "^5.0.7",
         "nodemailer": "^6.9.14",
         "passport": "^0.7.0",
         "passport-spotify": "^2.0.0",
