--- a/backend/package.json
+++ b/backend/package.json
@@ -2,13 +2,16 @@
     "dependencies": {
         "axios": "^1.7.7",
         "bcrypt": "^5.1.1",
+        "connect-mongo": "^5.1.0",
         "cookie-parser": "^1.4.7",
+        "cookie-session": "^2.1.0",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^4.21.1",
         "express-session": "^1.18.1",
         "got": "^13.0.0",
         "jsonwebtoken": "^9.0.2",
+        "memorystore": "^1.6.7",
         "mongodb": "^6.9.0",
         "mongoose": "^8.7.2",
         "nanoid": "^5.0.7",
