--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,10 +1,15 @@
 {
     "version": 2,
     "builds": [
-      { "src": "backend/index.js", "use": "@vercel/node" }
+        {
+           "src": "*.js",
+           "use": "@vercel/node"
+        }
     ],
-    "routes": [
-      { "src": "/(.*)", "dest": "backend/index.js" }
+    "routes":[
+        {
+            "src": "/(.*)",
+            "dest": "/"
+        }
     ]
-  }
-  
+}
